--- a/index.html
+++ b/index.html
@@ -2,153 +2,156 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>For My Betta</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       margin: 0;
-      padding: 0;
+      font-family: 'Segoe UI', sans-serif;
       background: url('bg.jpg') no-repeat center center fixed;
       background-size: cover;
-      font-family: 'Segoe UI', sans-serif;
       color: white;
       overflow-x: hidden;
     }
 
-    .overlay {
-      background-color: rgba(0, 0, 0, 0.7);
-      min-height: 100vh;
-      padding: 20px;
-    }
-
-    .password-container {
+    #lock-screen {
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
+      height: 100vh;
+      backdrop-filter: blur(5px);
+      background: rgba(0,0,0,0.5);
     }
 
-    input[type="password"] {
-      padding: 12px;
-      border: none;
-      border-radius: 8px;
+    input {
+      padding: 10px;
+      margin: 10px;
       font-size: 16px;
-      margin-bottom: 10px;
-      outline: none;
+      border-radius: 8px;
+      border: none;
     }
 
     button {
       padding: 10px 20px;
       border: none;
-      border-radius: 8px;
-      background-color: #ff69b4;
+      background: #ff66cc;
       color: white;
       font-size: 16px;
+      border-radius: 20px;
       cursor: pointer;
     }
 
-    .hidden-content {
-      display: none;
+    #main-content {
       text-align: center;
       padding: 20px;
+      animation: glow 2s infinite alternate;
     }
 
-    .reveal-btn {
-      font-size: 50px;
-      color: #ffb3d9;
+    .hidden {
+      display: none;
+    }
+
+    #heart {
+      font-size: 80px;
       cursor: pointer;
-      animation: bounceGlow 2s infinite;
-      margin-top: 40px;
-      text-align: center;
-      transition: transform 0.3s ease;
+      animation: pulse 1.5s infinite;
+      margin-top: 100px;
     }
 
-    .reveal-btn:hover {
-      transform: scale(1.1);
-      text-shadow: 0 0 10px #fff, 0 0 20px #ff80ab;
+    #heart small {
+      display: block;
+      font-size: 16px;
     }
 
-    @keyframes bounceGlow {
-      0%   { transform: translateY(0); text-shadow: 0 0 10px #fff; }
-      50%  { transform: translateY(-8px); text-shadow: 0 0 20px #ff80ab, 0 0 40px #ffc0cb; }
-      100% { transform: translateY(0); text-shadow: 0 0 10px #fff; }
+    #reveal-box {
+      margin-top: 30px;
+      animation: fadeIn 2s ease-in-out;
     }
 
-    .photo {
-      max-width: 90%;
-      margin: 20px auto;
-      border-radius: 16px;
-      box-shadow: 0 0 20px rgba(255, 192, 203, 0.6);
+    .photos {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      align-items: center;
+      margin: 20px 0;
     }
 
-    .message {
-      font-size: 20px;
-      margin-top: 20px;
-      line-height: 1.6;
+    .photos img {
+      width: 90%;
+      max-width: 300px;
+      border-radius: 15px;
+      box-shadow: 0 0 15px #fff5;
     }
 
-    .emoji {
-      font-size: 24px;
+    @keyframes glow {
+      from { text-shadow: 0 0 5px #fff, 0 0 10px #f0f, 0 0 15px #0ff; }
+      to { text-shadow: 0 0 10px #0ff, 0 0 15px #f0f, 0 0 20px #fff; }
     }
 
-    @media only screen and (max-width: 600px) {
-      .message {
-        font-size: 18px;
-      }
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.1); }
+      100% { transform: scale(1); }
+    }
 
-      .reveal-btn {
-        font-size: 40px;
-      }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @media (max-width: 600px) {
+      h1 { font-size: 24px; }
+      p, h2 { font-size: 16px; }
+      #heart { font-size: 60px; }
     }
   </style>
 </head>
 <body>
-  <div class="overlay">
-    <div id="passwordSection" class="password-container">
-      <h2>Enter Password to Unlock</h2>
-      <input type="password" id="passwordInput" placeholder="Password...">
-      <button onclick="checkPassword()">Unlock</button>
-    </div>
+  <div id="lock-screen">
+    <h2>Enter Password</h2>
+    <input type="password" id="password" placeholder="Enter password">
+    <button onclick="unlock()">Unlock</button>
+    <p id="error-msg"></p>
+  </div>
 
-    <div id="mainContent" class="hidden-content">
-      <div class="reveal-btn" onclick="revealContent()" title="Click to Open">
-        ❤️
-        <div style="font-size: 16px; margin-top: 5px;">Click to Open</div>
+  <div id="main-content" class="hidden">
+    <audio id="bg-music" src="Meherbaan_intro.mp3" autoplay loop></audio>
+
+    <div id="heart" onclick="revealMessage()">❤️<br><small>Click me</small></div>
+
+    <div id="reveal-box" class="hidden">
+      <h1>I lovee youu so muchh bettaaa 💕♾️</h1>
+      <p>
+        You're the most precious part of my life 💖<br>
+        Har pal tumhari yaadon mein rehta hoon 🌙<br>
+        Tum bin sab adhoora lagta hai 💔<br>
+        Hamesha tumhare saath hoon, kabhi chhod ke nahi jaunga 🫂
+      </p>
+
+      <div class="photos">
+        <img src="photo1.jpg" alt="Photo 1">
+        <img src="photo2.jpg" alt="Photo 2">
       </div>
 
-      <div id="revealedContent" style="display:none;">
-        <img src="photo.jpg" alt="Us" class="photo">
-        <div class="message">
-          I miss you so much betttaa 💭💗<br>
-          Jaldii aajaaa na please...<br><br>
-          I lovee youu so muchh bettaaa 💕♾️<br>
-          Hamesha saath rahunga... no matter what happens.
-        </div>
-      </div>
+      <h2>I miss you so much betttaa 🥺💫 jaldi aajaaa</h2>
     </div>
-
-    <audio id="bgMusic" loop>
-      <source src="music.mp3" type="audio/mpeg">
-    </audio>
   </div>
 
   <script>
-    const correctPassword = "yourpassword"; // Change this
-
-    function checkPassword() {
-      const input = document.getElementById('passwordInput').value;
-      if (input === correctPassword) {
-        document.getElementById('passwordSection').style.display = 'none';
-        document.getElementById('mainContent').style.display = 'block';
-        document.getElementById('bgMusic').play();
+    function unlock() {
+      const password = document.getElementById('password').value;
+      if (password === 'betta123') {
+        document.getElementById('lock-screen').style.display = 'none';
+        document.getElementById('main-content').classList.remove('hidden');
+        document.getElementById('bg-music').play();
       } else {
-        alert("Wrong password, try again!");
+        document.getElementById('error-msg').innerText = 'Incorrect password!';
       }
     }
 
-    function revealContent() {
-      document.getElementById('revealedContent').style.display = 'block';
+    function revealMessage() {
+      document.getElementById('reveal-box').classList.remove('hidden');
     }
   </script>
 </body>
