--- a/index.html
+++ b/index.html
@@ -1,157 +1,238 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>For My Betta</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Private - Betta Ke Liye</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: url('bg.jpg') no-repeat center center fixed;
-      background-size: cover;
-      color: white;
-      overflow-x: hidden;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #fce4ec;
+      position: relative;
+      min-height: 100vh;
+      overflow: hidden;
+      background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
     }
 
-    #lock-screen {
+    /* Galaxy Stars */
+    .stars, .twinkling, .moon {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      display: block;
+      z-index: 0;
+    }
+
+    .stars {
+      background: url('https://i.imgur.com/bAI8qVN.png') repeat;
+      animation: moveStars 200s linear infinite;
+    }
+
+    .twinkling {
+      background: url('https://i.imgur.com/3jK5n7w.png') repeat;
+      animation: moveTwinkling 100s linear infinite;
+    }
+
+    .moon {
+      background: url('https://i.imgur.com/kq2VYKP.png') no-repeat;
+      background-size: 150px;
+      width: 150px;
+      height: 150px;
+      top: 30px;
+      right: 30px;
+      left: auto;
+      z-index: 0;
+      animation: floatMoon 10s ease-in-out infinite alternate;
+    }
+
+    @keyframes moveStars {
+      from { background-position: 0 0; }
+      to { background-position: -10000px 5000px; }
+    }
+
+    @keyframes moveTwinkling {
+      from { background-position: 0 0; }
+      to { background-position: 10000px 0; }
+    }
+
+    @keyframes floatMoon {
+      from { transform: translateY(0); }
+      to { transform: translateY(20px); }
+    }
+
+    .container {
+      position: relative;
+      z-index: 1;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      height: 100vh;
-      backdrop-filter: blur(5px);
-      background: rgba(0,0,0,0.5);
-    }
-
-    input {
-      padding: 10px;
-      margin: 10px;
-      font-size: 16px;
-      border-radius: 8px;
-      border: none;
-    }
-
-    button {
-      padding: 10px 20px;
-      border: none;
-      background: #ff66cc;
-      color: white;
-      font-size: 16px;
-      border-radius: 20px;
-      cursor: pointer;
-    }
-
-    #main-content {
-      text-align: center;
       padding: 20px;
-      animation: glow 2s infinite alternate;
     }
 
-    .hidden {
-      display: none;
-    }
-
-    #heart {
-      font-size: 80px;
-      cursor: pointer;
-      animation: pulse 1.5s infinite;
+    .password-box {
+      text-align: center;
       margin-top: 100px;
-    }
-
-    #heart small {
-      display: block;
-      font-size: 16px;
-    }
-
-    #reveal-box {
-      margin-top: 30px;
       animation: fadeIn 2s ease-in-out;
     }
 
-    .photos {
-      display: flex;
+    input[type="password"] {
+      padding: 12px;
+      border-radius: 10px;
+      border: none;
+      width: 80%;
+      max-width: 250px;
+    }
+
+    button {
+      margin-top: 10px;
+      padding: 10px 25px;
+      background-color: #e91e63;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    #content {
+      display: none;
       flex-direction: column;
-      gap: 15px;
       align-items: center;
+      animation: fadeIn 1.5s ease-in-out forwards;
+      margin-top: 20px;
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 28px;
+      margin: 20px 10px;
+      animation: slideIn 1.2s ease-in-out;
+      color: #ffb3d9;
+      text-shadow: 0 0 10px #ff80ab;
+    }
+
+    .photo {
+      width: 95%;
+      max-width: 400px;
+      border-radius: 20px;
+      box-shadow: 0 4px 15px rgba(255,255,255,0.2);
       margin: 20px 0;
+      animation: zoomIn 1.2s ease-in-out;
     }
 
-    .photos img {
-      width: 90%;
-      max-width: 300px;
+    .message {
+      background: rgba(255, 240, 246, 0.9);
+      color: #4a1c32;
       border-radius: 15px;
-      box-shadow: 0 0 15px #fff5;
+      padding: 20px;
+      width: 95%;
+      max-width: 600px;
+      text-align: center;
+      box-shadow: 0 0 15px rgba(255,255,255,0.1);
+      animation: fadeInUp 1.4s ease-in-out;
     }
 
-    @keyframes glow {
-      from { text-shadow: 0 0 5px #fff, 0 0 10px #f0f, 0 0 15px #0ff; }
-      to { text-shadow: 0 0 10px #0ff, 0 0 15px #f0f, 0 0 20px #fff; }
+    .signature {
+      margin-top: 15px;
+      font-weight: bold;
+      font-style: italic;
+      font-size: 18px;
     }
 
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.1); }
-      100% { transform: scale(1); }
+    .emotional {
+      margin-top: 20px;
+      font-size: 16px;
+      color: #ffe6f0;
+      background: rgba(255, 255, 255, 0.1);
+      padding: 10px 15px;
+      border-radius: 12px;
+      text-align: center;
+      max-width: 90%;
+      backdrop-filter: blur(5px);
     }
 
+    audio {
+      margin-top: 20px;
+    }
+
+    /* Animations */
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+      from { opacity: 0; }
+      to { opacity: 1; }
     }
 
-    @media (max-width: 600px) {
-      h1 { font-size: 24px; }
-      p, h2 { font-size: 16px; }
-      #heart { font-size: 60px; }
+    @keyframes slideIn {
+      from { transform: translateX(-100px); opacity: 0; }
+      to { transform: translateX(0); opacity: 1; }
     }
+
+    @keyframes zoomIn {
+      from { transform: scale(0.8); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
+    }
+
+    @keyframes fadeInUp {
+      from { transform: translateY(40px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
+
+    /* Mobile optimization */
+    @media screen and (max-width: 480px) {
+      h1 { font-size: 22px; }
+      .message { padding: 15px; font-size: 14px; }
+      .signature { font-size: 16px; }
+    }
+
   </style>
 </head>
 <body>
-  <div id="lock-screen">
-    <h2>Enter Password</h2>
-    <input type="password" id="password" placeholder="Enter password">
-    <button onclick="unlock()">Unlock</button>
-    <p id="error-msg"></p>
-  </div>
+  <div class="stars"></div>
+  <div class="twinkling"></div>
+  <div class="moon"></div>
 
-  <div id="main-content" class="hidden">
-    <audio id="bg-music" src="Meherbaan_intro.mp3" autoplay loop></audio>
+  <div class="container">
+    <div class="password-box">
+      <h2>Enter Password to Continue</h2>
+      <input type="password" id="passwordInput" placeholder="Enter password" />
+      <br />
+      <button onclick="checkPassword()">Unlock</button>
+    </div>
 
-    <div id="heart" onclick="revealMessage()">❤️<br><small>Click me</small></div>
-
-    <div id="reveal-box" class="hidden">
+    <div id="content">
       <h1>I lovee youu so muchh bettaaa 💕♾️</h1>
-      <p>
-        You're the most precious part of my life 💖<br>
-        Har pal tumhari yaadon mein rehta hoon 🌙<br>
-        Tum bin sab adhoora lagta hai 💔<br>
-        Hamesha tumhare saath hoon, kabhi chhod ke nahi jaunga 🫂
-      </p>
+      <img src="Photo1.jpg" alt="Uski yaad" class="photo" />
+      <div class="message">
+        <p>Hi Betta,</p>
+        <p>Shayad tu naraz hai... door hai... lekin tu meri duniya hai. ♾️🌎Tere bina har din adhoora lagta hai.🥲 Main chahta hoon ki tu wapas aaye, aur phir kabhi na jaaye♥️🫂.</p>
+        <p>Tu sirf meri girlfriend hi nahi... meri jaan hai. Tu meri muskurahat, meri har dua  hai. main humesha tera sath chahta hoon.</p>
+        <p>Har pal main tujhme jeeta hoon... aur har lamha tujhe yaad karta hoon. 💕❤️Mujhe maaf kar de agar kabhi dukh diya ho, But – main tujhe dil se, unconditionally pyaar karta hu💕🧿🫂.</p>
+        <div class="signature">Your Betuuu</div>
+      </div>
+      <img src="Photo2.jpg" alt="Tum dono" class="photo" />
 
-      <div class="photos">
-        <img src="photo1.jpg" alt="Photo 1">
-        <img src="photo2.jpg" alt="Photo 2">
+      <div class="emotional">
+        I miss you so much betta... please wapas aa ja... tera Betuuu bina tere adhura hai. 💖✨
       </div>
 
-      <h2>I miss you so much betttaa 🥺💫 jaldi aajaaa</h2>
+      <audio id="bg-music" loop autoplay>
+        <source src="Meherbaan_intro.mp3" type="audio/mpeg" />
+        Your browser does not support the audio element.
+      </audio>
     </div>
   </div>
 
   <script>
-    function unlock() {
-      const password = document.getElementById('password').value;
-      if (password === 'betta123') {
-        document.getElementById('lock-screen').style.display = 'none';
-        document.getElementById('main-content').classList.remove('hidden');
-        document.getElementById('bg-music').play();
+    function checkPassword() {
+      const input = document.getElementById("passwordInput").value;
+      if (input === "betta123") {
+        document.querySelector(".password-box").style.display = "none";
+        const content = document.getElementById("content");
+        content.style.display = "flex";
+        document.getElementById("bg-music").play();
       } else {
-        document.getElementById('error-msg').innerText = 'Incorrect password!';
+        alert("Wrong password. Try again.");
       }
-    }
-
-    function revealMessage() {
-      document.getElementById('reveal-box').classList.remove('hidden');
     }
   </script>
 </body>
