--- a/index.html
+++ b/index.html
@@ -4,26 +4,29 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="A personal heartfelt message for someone special." />
-  <meta name="robots" content="noindex" /> <!-- Prevent search engine indexing for privacy -->
+  <meta name="robots" content="noindex" />
   <title>Private - Betta Ke Liye</title>
   <style>
-    * {
-      box-sizing: border-box; /* Ensures padding/margins don't break layout */
-    }
-
+    * { box-sizing: border-box; }
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #0b0c2a;
+      background: #0b0c2a url('bg.jpg') no-repeat center center/cover;
       color: #fce4ec;
       position: relative;
       min-height: 100vh;
-      overflow-x: hidden; /* Prevent horizontal scroll */
+      overflow-x: hidden;
+      animation: dreamyGlow 5s ease-in-out infinite;
     }
 
-    /* Star background */
-    body::before,
-    body::after {
+    /* Dreamy Glow Effect */
+    @keyframes dreamyGlow {
+      0%, 100% { filter: brightness(1); }
+      50% { filter: brightness(1.2); }
+    }
+
+    /* Star Background */
+    body::before, body::after {
       content: '';
       position: absolute;
       width: 200%;
@@ -36,20 +39,14 @@
       background-size: 2px 2px;
       animation: starMove 200s linear infinite;
     }
-
     body::after {
       background-size: 3px 3px;
       opacity: 0.5;
       animation-duration: 300s;
     }
-
     @keyframes starMove {
-      0% {
-        transform: translate(0, 0);
-      }
-      100% {
-        transform: translate(100px, 100px);
-      }
+      0% { transform: translate(0, 0); }
+      100% { transform: translate(100px, 100px); }
     }
 
     .container {
@@ -59,7 +56,7 @@
       flex-direction: column;
       align-items: center;
       padding: 20px;
-      min-height: 100vh; /* Ensure container takes full height */
+      min-height: 100vh;
     }
 
     .password-box {
@@ -72,6 +69,7 @@
       font-size: 24px;
       margin-bottom: 15px;
       color: #ffb3d9;
+      text-shadow: 0 0 5px #ff80ab;
     }
 
     input[type="password"] {
@@ -89,6 +87,17 @@
       color: #777;
     }
 
+    .shake {
+      animation: shake 0.5s ease-in-out;
+    }
+
+    @keyframes shake {
+      0%, 100% { transform: translateX(0); }
+      25% { transform: translateX(-5px); }
+      50% { transform: translateX(5px); }
+      75% { transform: translateX(-5px); }
+    }
+
     button {
       margin-top: 15px;
       padding: 10px 30px;
@@ -99,20 +108,79 @@
       cursor: pointer;
       font-weight: bold;
       font-size: 16px;
-      transition: background-color 0.3s ease;
+      transition: background-color 0.3s ease, transform 0.2s ease;
     }
 
     button:hover {
-      background-color: #c2185b; /* Darker shade on hover */
+      background-color: #c2185b;
+      transform: scale(1.05);
+    }
+
+    /* Heart Animation */
+    .heart-container {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.7);
+      z-index: 2;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .heart {
+      width: 50px;
+      height: 50px;
+      background: #ff80ab;
+      position: relative;
+      transform: rotate(-45deg);
+      cursor: pointer;
+      animation: pulse 1s ease-in-out infinite;
+    }
+
+    .heart::before,
+    .heart::after {
+      content: '';
+      width: 50px;
+      height: 50px;
+      background: #ff80ab;
+      border-radius: 50%;
+      position: absolute;
+    }
+
+    .heart::before {
+      top: -25px;
+      left: 0;
+    }
+
+    .heart::after {
+      left: 25px;
+      top: 0;
+    }
+
+    @keyframes pulse {
+      0% { transform: rotate(-45deg) scale(1); }
+      50% { transform: rotate(-45deg) scale(1.2); }
+      100% { transform: rotate(-45deg) scale(1); }
     }
 
     #content {
       display: none;
       flex-direction: column;
       align-items: center;
-      animation: fadeIn 1.5s ease-in-out forwards;
+      animation: magicOpen 1.5s ease-in-out forwards;
       margin-top: 20px;
       width: 100%;
+      max-width: 600px;
+      margin-bottom: 20px;
+    }
+
+    /* Magic Opening Effect */
+    @keyframes magicOpen {
+      0% { opacity: 0; transform: scale(0.8) translateY(50px); filter: blur(5px); }
+      100% { opacity: 1; transform: scale(1) translateY(0); filter: blur(0); }
     }
 
     h1 {
@@ -131,7 +199,7 @@
       box-shadow: 0 4px 15px rgba(255, 255, 255, 0.2);
       margin: 20px 0;
       animation: zoomIn 1.2s ease-in-out;
-      display: block; /* Ensure images don't stretch */
+      display: block;
     }
 
     .message {
@@ -144,6 +212,7 @@
       text-align: center;
       box-shadow: 0 0 15px rgba(255, 255, 255, 0.1);
       animation: fadeInUp 1.4s ease-in-out;
+      font-size: 16px;
     }
 
     .signature {
@@ -159,68 +228,34 @@
       max-width: 300px;
     }
 
-    /* Animations */
     @keyframes fadeIn {
-      from {
-        opacity: 0;
-      }
-      to {
-        opacity: 1;
-      }
+      from { opacity: 0; }
+      to { opacity: 1; }
     }
 
     @keyframes slideIn {
-      from {
-        transform: translateX(-100px);
-        opacity: 0;
-      }
-      to {
-        transform: translateX(0);
-        opacity: 1;
-      }
+      from { transform: translateX(-100px); opacity: 0; }
+      to { transform: translateX(0); opacity: 1; }
     }
 
     @keyframes zoomIn {
-      from {
-        transform: scale(0.8);
-        opacity: 0;
-      }
-      to {
-        transform: scale(1);
-        opacity: 1;
-      }
+      from { transform: scale(0.8); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
     }
 
     @keyframes fadeInUp {
-      from {
-        transform: translateY(40px);
-        opacity: 0;
-      }
-      to {
-        transform: translateY(0);
-        opacity: 1;
-      }
+      from { transform: translateY(40px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
     }
 
     @media screen and (max-width: 480px) {
-      h1 {
-        font-size: 22px;
-      }
-      h2 {
-        font-size: 20px;
-      }
-      .message {
-        padding: 15px;
-        font-size: 14px;
-      }
-      .signature {
-        font-size: 16px;
-      }
-      input[type="password"],
-      button {
-        width: 90%;
-        max-width: 220px;
-      }
+      h1 { font-size: 22px; }
+      h2 { font-size: 20px; }
+      .message { padding: 15px; font-size: 14px; }
+      .signature { font-size: 16px; }
+      input[type="password"], button { width: 90%; max-width: 220px; }
+      .photo { max-width: 90%; }
+      .container { padding: 10px; }
     }
   </style>
 </head>
@@ -233,46 +268,9 @@
         id="passwordInput"
         placeholder="Enter password"
         autofocus
-        onkeydown="if(event.key === 'Enter') checkPassword()"
       />
       <br />
-      <button onclick="checkPassword()">Unlock</button>
+      <button id="unlockButton">Unlock</button>
     </div>
 
-    <div id="content">
-      <h1>I lovee youu sooo muchh betttaa</h1>
-      <img src="Photo1.jpg" alt="Uski yaad" class="photo" />
-      <div class="message">
-        <p>Hi Betta,</p>
-        <p>Shayad tu naraz hai... door hai... lekin tu meri duniya hai. Tere bina har din adhoora lagta hai. Main chahta hoon ki tu wapas aaye, aur phir kabhi na jaaye.</p>
-        <p>Tu sirf meri nahi... meri jaan hai. Tu meri muskurahat, meri har dua ka jawab hai. Betta, main humesha tera sath chahta hoon.</p>
-        <p>Har pal main tujhme jeeta hoon... aur har lamha tujhe yaad karta hoon. Mujhe maaf kar de agar kabhi dukh diya ho, lekin itna toh jaane – main tujhe dil se, bina kisi shart ke pyaar karta hoon.</p>
-        <div class="signature">Your Betuuu</div>
-      </div>
-      <img src="Photo2.jpg" alt="Tum dono" class="photo" />
-      <audio id="bg-music" controls loop>
-        <source src="Kaira.mp3" type="audio/mpeg" />
-        Your browser does not support the audio element.
-      </audio>
-    </div>
-  </div>
-
-  <script>
-    function checkPassword() {
-      const input = document.getElementById("passwordInput").value.trim();
-      const correctPassword = "7709826839"; // Consider storing this securely in a real app
-      const passwordBox = document.getElementById("passwordBox");
-      const content = document.getElementById("content");
-      const music = document.getElementById("bg-music");
-
-      if (input === correctPassword) {
-        passwordBox.style.display = "none";
-        content.style.display = "flex";
-        music.play().catch((e) => console.log("Audio play failed:", e)); // Handle autoplay restrictions
-      } else {
-        alert("Wrong password. Try again.");
-        document.getElementById("passwordInput").value = ""; // Clear input on wrong password
-      }
-    }
-
-    // Prevent form submission on Enter
+    <!--
