--- a/index.html
+++ b/index.html
@@ -215,6 +215,16 @@
       font-size: 16px;
     }
 
+    .final-message {
+      font-size: 18px;
+      font-weight: bold;
+      color: #e91e63;
+      text-align: center;
+      margin: 20px 0;
+      text-shadow: 0 0 5px #ff80ab;
+      animation: fadeInUp 1.6s ease-in-out;
+    }
+
     .signature {
       margin-top: 15px;
       font-weight: bold;
@@ -252,6 +262,7 @@
       h1 { font-size: 22px; }
       h2 { font-size: 20px; }
       .message { padding: 15px; font-size: 14px; }
+      .final-message { font-size: 16px; }
       .signature { font-size: 16px; }
       input[type="password"], button { width: 90%; max-width: 220px; }
       .photo { max-width: 90%; }
@@ -286,10 +297,10 @@
         <p>Shayad tu naraz hai... door hai... lekin tu meri duniya hai 🌎. Tere bina har din adhoora lagta hai. Main chahta hoon ki tu wapas aaye, aur phir kabhi na jaaye ♾️.</p>
         <p>Tu sirf meri nahi... meri jaan hai ❤️. Tu meri muskurahat, meri har dua ka jawab hai. Betta, main humesha tera sath chahta hoon 🫂.</p>
         <p>Har pal main tujhme jeeta hoon... aur har lamha tujhe yaad karta hoon. Mujhe maaf kar de agar kabhi dukh diya ho 🧿, lekin itna toh jaane – main tujhe dil se, bina kisi shart ke pyaar karta hoon 💕.</p>
-        <p>I miss you so muchh betta 💕🫂 jaldi waps aaja.</p>
         <div class="signature">Your Betuuu 💕</div>
       </div>
       <img src="Photo2.jpg" alt="Tum dono" class="photo" />
+      <p class="final-message">I miss you so muchh betta 😢🫂 jaldi waps aaja</p>
       <audio id="bg-music" controls loop>
         <source src="Meherbaan_intro.mp3" type="audio/mpeg" />
         Your browser does not support the audio element.
